<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.niuzj.corelibrary.views.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:core_library_title="@string/edit" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/core_library_default_white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/core_library_default_padding"
        android:paddingTop="@dimen/core_library_default_space"
        android:paddingRight="@dimen/core_library_default_padding"
        android:paddingBottom="@dimen/core_library_default_space">

        <Button
            android:id="@+id/bt_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom"
        android:layout_below="@id/title_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/core_library_default_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                style="@style/text_tip"
                android:text="@string/type" />

            <EditText
                android:id="@+id/et_type"
                style="@style/input"
                android:hint="@string/type_hint" />

            <View style="@style/line_horizational" />

            <TextView
                style="@style/text_tip"
                android:text="@string/title" />

            <EditText
                android:id="@+id/et_title"
                style="@style/input"
                android:hint="@string/title_hint" />

            <View style="@style/line_horizational" />

            <TextView
                style="@style/text_tip"
                android:text="@string/content" />

            <EditText
                android:id="@+id/et_content"
                style="@style/input"
                android:hint="@string/content_hint"
                android:maxLength="500" />

            <View style="@style/line_horizational" />

            <TextView
                style="@style/text_tip"
                android:text="@string/url" />

            <EditText
                android:id="@+id/et_url"
                style="@style/input"
                android:hint="@string/url_hint" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>







