<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/core_library_default_white"
    android:orientation="vertical">

    <com.niuzj.corelibrary.views.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:core_library_title="@string/setting" />

    <TextView
        style="@style/text_tip"
        android:text="@string/default_open_type" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/core_library_default_space">

        <RadioButton
            android:id="@+id/radio_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_open_inner" />

        <RadioButton
            android:id="@+id/radio_browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_open_browser" />

        <RadioButton
            android:id="@+id/radio_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_before_open" />

    </RadioGroup>

</LinearLayout>